@@ -3,7 +3,9 @@ changelog
 v1.0	initial
 
 v1.1	NEW usb flash drive read/write
+		NEW SCRIPT OP for scripted execution of other scripts!
 		NEW JI OP just intonation helper
+		NEW keypad executes scripts (works for standalone usb keypads and full-sized keyboards)
 		NEW ABS OP absolute value, single argument
 		NEW FLIP OP variable which changes state (0/1) on each read
 		NEW LOGIC OPS: AND, OR, XOR
